--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Dashboard</title>
 </head>
 <body>
-    <h2>Welcome, {{ session['user'] }}</h2>
-    <a href="/logout">Logout</a>
+    <h2>Welcome, {{ current_user.username }}!</h2>
+    <a href="{{ url_for('logout') }}">Logout</a>
+
     <h3>Attendance Records</h3>
-    <ul>
-        {% for record in records %}
-            <li>Check-in: {{ record['check_in'] }} | Check-out: {{ record['check_out'] }}</li>
+    <table border="1">
+        <tr>
+            <th>Time In</th>
+            <th>Time Out</th>
+        </tr>
+        {% for attendance in attendances %}
+        <tr>
+            <td>{{ attendance.time_in }}</td>
+            <td>{{ attendance.time_out }}</td>
+        </tr>
         {% endfor %}
-    </ul>
-    <a href="/check-in">Check In</a>
-    <a href="/check-out">Check Out</a>
+    </table>
+
+    <h3>Mark Attendance</h3>
+    <a href="{{ url_for('dashboard', action='time_in') }}">Mark Time In</a><br><br>
+    <a href="{{ url_for('dashboard', action='time_out') }}">Mark Time Out</a>
 </body>
 </html>
